# Manitobot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  activities.py  basic_models.py  bot_basics.py  cheks.py  control_panel.py  controller.py  converters.py  daynight.py  dev_commands.py  duel.py  duel_search.py  duels_commands.py  embed.py  error_handler.py  errors.py  f_database.py  faction.py  funny_commands.py  game.py  globals.py  hang_commands.py  hang_search.py  interaction.py  locked_commands.py  mafia.py  main.py  management_commands.py  manitou_commands.py  night_comunicates.py  permissions.py  player.py  player_commands.py  postacie.py  pyproject.toml  requirements.txt  (+18 more)
.github/workflows/: build-docker.yml  build-election-docker.yml  gib-url.yml
manitobot/: activities.py  base_day_states.py  basic_models.py  bot_basics.py  cheks.py  control_panel.py  controller.py  converters.py  daily_commands.py  day_app_commands.py  day_slash_commands.py  day_states.py  daynight.py  dev_commands.py  duel.py  duels_commands.py  election_commands.py  election_service.py  error_handler.py  errors.py  f_database.py  faction.py  funny_commands.py  game.py  hang_search.py  interaction.py  mafia.py  management_commands.py  manitou_commands.py  marketing_commands.py  muting.py  my_checks.py  night_comunicates.py  permissions.py  player.py  player_commands.py  postacie.py  reaction_analysis.py  role.py  roles_commands.py  (+14 more)
tests/: bases.py  test_daily_commands.py  test_day_states.py  test_main.py  test_managment_commands.py  test_start_commands.py  test_starting.py
(+8 files in other folders)
