[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Jakub Mikłasz <jmiklasz21@gmail.com>"]
description = ""
name = "Manitobot"
version = "1.7.1"
[tool.poetry.dependencies]
"discord.py" = "^1.7.3"
python = "^3.11"
pytz = "^2023.3"
[tool.poetry.dev-dependencies]
