[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Jakub Mikłasz <jmiklasz21@gmail.com>"]
description = ""
name = "Manitobot"
version = "1.8.0"
[tool.poetry.dependencies]
"discord.py" = "^2.4.0"
python = "^3.11"
pytz = "^2023.3"
aiosqlite = "^0.20.0"
[tool.poetry.dev-dependencies]
