[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Jakub Mikłasz <jmiklasz21@gmail.com>"]
description = ""
name = "Manitobot"
version = "1.9.1"
[tool.poetry.dependencies]
"discord.py" = "^2.7.1"
python = "^3.11"
pytz = "^2023.3"
aiosqlite = "^0.20.0"
